--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
 DB_CONNECTION=mongodb+srv://eddieOW:eddieOWI_2023_1234_dev_ytb@eddieow.lquyvlg.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET_KEY=---JUSTRANDOMVALUEs019247***
+JWT_SECRET_KEY=1234
