--- a/client/term4-group2-qna/public/manifest.json
+++ b/client/term4-group2-qna/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Code Genius",
+  "name": "Code Genius | Our Collective Expertise.",
   "icons": [
     {
       "src": "favicon.ico",
