--- a/client/term4-group2-qna/package.json
+++ b/client/term4-group2-qna/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
