--- a/client/term4-group2-qna/package.json
+++ b/client/term4-group2-qna/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.10.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "crypto-browserify": "^3.12.0",
@@ -19,7 +18,9 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "solid-simple-code-editor": "^0.2.2",
-    "web-vitals": "^2.1.4"
+    "swiper": "^10.3.1",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,9 +49,6 @@
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3",
-    "node-polyfill-webpack-plugin": "^2.0.1",
-    "webpack-cli": "^5.1.4"
+    "@babel/preset-react": "^7.22.15"
   }
 }
